Fixed some spacing on the pages and nav bar.

--- a/ng/src/styles.css
+++ b/ng/src/styles.css
@@ -15,8 +15,8 @@ a {
 }
 
 main {
-	height: 100vh;
-	width: 100vw;
+	height: 90vh;
+	width: 97vw;
 }
 
 
@@ -24,6 +24,10 @@ main {
 .navbar {
 	background-color: #F4F0DE;
 	font-weight: 700;
+	height: 10vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .nav-link {
